# flippys

./: Cargo.toml  Makefile  README.md  application.fam
.cargo/: config.toml
.github/workflows/: build.yaml
btcon/: .gitignore  README.md  application.fam
btcon/src/: btcon.c  btcon.h  consts.h
btcon/src/scenes/: btcon_scene_main_menu.c
btcon_client/: Cargo.toml
btcon_client/src/: app.rs  icon10px.icon  main.rs
btcon_client/src/bt/: app.rs  callbacks.rs  mod.rs  serial_profile.rs
btcon_client/src/utils/: cb_wrapper.rs  mod.rs
btcon_server/: Cargo.toml
src/: consts.h  flippys.c  flippys.h  views.h
src/scenes/: btcon_scene.c  btcon_scene.h  btcon_scene_config.h  btcon_scene_main_menu.c  flippys_scene.c  flippys_scene.h  flippys_scene_config.h  flippys_scene_main_menu.c
